--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         <div class="row div-center w800">
             <div class="toolbar-item col-sm-6 col-md-6">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Enter file name" aria-describedby="file-name">
-                    <span class="input-group-addon" id="file-name">.xlsx</span>
+                    <input id="file-name" type="text" class="form-control" placeholder="Enter file name" aria-describedby="span-file-name">
+                    <span class="input-group-addon" id="span-file-name">.xlsx</span>
                 </div>
             </div>
             <div class="toolbar-item col-sm-6 col-md-6">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Enter sheet name" aria-describedby="sheet-name">
-                    <span class="input-group-addon" id="sheet-name">_テスト仕様書</span>
+                    <input id="sheet-name" type="text" class="form-control" placeholder="Enter sheet name" aria-describedby="sspan-heet-name">
+                    <span class="input-group-addon" id="span-sheet-name">_テスト仕様書</span>
                 </div>
             </div>
         </div>
