--- a/index.html
+++ b/index.html
@@ -51,12 +51,8 @@
             </div>
             <div class="col-sm-1 col-md-1">
                 <div class="banner-sort">
-                    <div>
-                        <img class="btn-sort" id="upwards" idth="50" height="50"
-                            src="https://img.icons8.com/ios/50/circled-chevron-up.png" alt="circled-chevron-up" />
-                        <img class="btn-sort" id="downwards" width="50" height="50"
-                            src="https://img.icons8.com/ios/50/circled-chevron-down.png" alt="circled-chevron-down" />
-                    </div>
+                    <button id="upwards" class="btn btn-success btn-sort">△</button>
+                    <button id="downwards" class="btn btn-success btn-sort">▽</button>
                 </div>
             </div>
         </div>
