--- a/index.html
+++ b/index.html
@@ -47,7 +47,14 @@
         <!-- the grid -->
         <div class="row div-center w800">
             <div class="col-sm-11 col-md-11">
-                <div id="theGrid"></div>
+                <div class="form-check checkbox-sheet">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+                    <label class="form-check-label" for="flexCheckChecked">
+                        Create child sheet
+                    </label>
+                </div>
+                <div id="theGrid">
+                </div>
             </div>
             <div class="col-sm-1 col-md-1">
                 <div class="banner">
